# o-browser

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
adapters/vivatech/: README.md  pyproject.toml
adapters/vivatech/o_browser_vivatech/: __init__.py
o_browser/: __init__.py  client.py  har.py  remote.py
